# jons-mcp-hello-world

./: .gitignore  README.md  hello-config.json.example  pyproject.toml
src/: __init__.py  hello_mcp.py  jons_mcp_hello_world.py
tests/: __init__.py  test_hello.py
